@@ -588,6 +588,29 @@ onto the same gearman queues. Default: `check_results`
 ====
 
 
+orphan_host_checks::
+The Mod-Gearman NEB module will submit a fake result for orphaned host
+checks with a message saying there is no worker running for this
+queue. Use this option to get better reporting results, otherwise your
+hosts will keep their last state as long as there is no worker
+running.
+Default is yes.
++
+====
+    orphan_host_checks=yes
+====
+
+
+orphan_service_checks::
+Same like 'orphan_host_checks' but for services.
+Default is yes.
++
+====
+    orphan_service_checks=yes
+====
+
+
+
 Worker Options
 ~~~~~~~~~~~~~~
 
