@@ -124,7 +124,17 @@ result_workers=1
 # handling performance data. For example: pnp4nagios
 # Performance data is just written to the gearman
 # queue.
-# Default no
+# Default: no
 perfdata=no
 
+# The Mod-Gearman NEB module will submit a fake result for orphaned host
+# checks with a message saying there is no worker running for this
+# queue. Use this option to get better reporting results, otherwise your
+# hosts will keep their last state as long as there is no worker
+# running.
+# Default: yes
+orphan_host_checks=yes
 
+# Same like 'orphan_host_checks' but for services.
+# Default: yes
+orphan_service_checks=yes
