@@ -108,13 +108,13 @@ key=should_be_changed
 
 # sets a list of hostgroups which will not be executed
 # by gearman. They are just passed through.
-# Default is none
+# Default: none
 localhostgroups=
 
 
 # sets a list of servicegroups which will not be executed
 # by gearman. They are just passed through.
-# Default is none
+# Default: none
 localservicegroups=
 
 
@@ -132,7 +132,7 @@ result_workers=1
 # handling performance data. For example: pnp4nagios
 # Performance data is just written to the gearman
 # queue.
-# Default no
+# Default: no
 perfdata=no
 
 # perfdata mode overwrite helps preventing the perdata queue getting to big
@@ -140,6 +140,17 @@ perfdata=no
 # 2 = append
 perfdata_mode=1
 
+# The Mod-Gearman NEB module will submit a fake result for orphaned host
+# checks with a message saying there is no worker running for this
+# queue. Use this option to get better reporting results, otherwise your
+# hosts will keep their last state as long as there is no worker
+# running.
+# Default: yes
+orphan_host_checks=yes
+
+# Same like 'orphan_host_checks' but for services.
+# Default: yes
+orphan_service_checks=yes
 
 ###############################################################################
 #
