@@ -1,6 +1,8 @@
 This file documents the revision history for mod_gearman.
 
 1.2.2  ...
+          - orphaned hosts/services generate a fake result with useful error message
+          - bypass eventhandler from hosts/services in local host/servicegroups
           - fixed NAGIOS_PLUGIN env in epn
 
 1.2.0  Sun Jan  8 18:42:56 CET 2012
